--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${reference.Easel_11_15.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,8 +61,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Easel_11_15=../Easel_11_15 - Copy - Copy/Easel_11_15 - Copy - Copy
-reference.Easel_11_15.jar=${project.Easel_11_15}/dist/Easel_11_15.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
