--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,6 +49,7 @@ file.reference.derbynet.jar-1=derby\\derbynet.jar
 file.reference.derbyoptionaltools.jar-1=derby\\derbyoptionaltools.jar
 file.reference.derbyrun.jar-1=derby\\derbyrun.jar
 file.reference.derbytools.jar-1=derby\\derbytools.jar
+file.reference.NetBeansProjects-FoodMoodV1=.
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -71,7 +72,8 @@ javac.classpath=\
     ${file.reference.derbynet.jar-1}:\
     ${file.reference.derbyoptionaltools.jar-1}:\
     ${file.reference.derbyrun.jar-1}:\
-    ${file.reference.derbytools.jar-1}
+    ${file.reference.derbytools.jar-1}:\
+    ${file.reference.NetBeansProjects-FoodMoodV1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
