--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -73,7 +73,9 @@ javac.classpath=\
     ${file.reference.derbyoptionaltools.jar-1}:\
     ${file.reference.derbyrun.jar-1}:\
     ${file.reference.derbytools.jar-1}:\
-    ${file.reference.NetBeansProjects-FoodMoodV1}
+    ${file.reference.NetBeansProjects-FoodMoodV1}:\
+    ${libs.JCommon_1.0.8.classpath}:\
+    ${libs.JFreeChart_1.0.19.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
